# Folio

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  claude_mem_use.txt  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml  e2e.yml
.opencode/plans/: equilibra-roadmap.md  product-improvement.md
app/: __init__.py  config.py  database.py  main.py
app/api/: brokerage_routes.py  core_routes.py  investment_routes.py  routes.py  stock_routes.py
app/models/: __init__.py  brokerage.py  core.py  investment.py  schemas.py  stock.py  trading.py
app/scripts/: run_simple_dca.py  test_akshare.py
app/services/: __init__.py  asset_manager.py  brokerage_account_service.py  exchange_rate_service.py  investment_manager.py  okx_client.py  risk_controller.py  stock_client.py  stock_position_manager.py  strategy_engine.py  trade_executor.py  vector_store.py
docs/: claude-code-plugins-guide.md
scripts/: dev.sh  diagnose.sh  setup.sh  start_all.sh  start_core.sh
streamlit_app/: Home.py  __init__.py  api_client.py
streamlit_app/.streamlit/: config.toml
streamlit_app/pages/: 1_Assets.py  1_📊_资产总览.py  2_💰_账户管理.py  3_Budgets.py  3_📅_预算管理.py  3_📈_交易流水.py  4_Expenses.py  4_📝_日常记账.py  4_🤖_AI_分析.py  5_📈_投资组合.py  6_Trades.py  6_📈_股票行情.py  6_📝_交易录入.py  7_💼_股票持仓.py
streamlit_app/pages/_archive/: 3_📈_交易流水.py  4_🤖_AI_分析.py  5_📰_市场新闻.py  6_📈_股票行情.py  7_💼_股票持仓.py  8_📝_交易录入.py
tests/: test_api.py  test_e2e.py  test_expense_extended.py  test_holdings.py  test_market_sync.py  test_models.py  test_portfolio.py  test_transfers.py
