[project]
name = "equilibra"
version = "1.0.0"
description = "Personal Financial Management System with AI Analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Equilibra Team" }
]
keywords = ["finance", "portfolio", "ai", "fastapi", "quantitative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "greenlet>=3.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "ccxt>=4.2.25",
    "akshare>=1.13.0",
    "langgraph>=0.0.20",
    "langchain-core>=0.1.16",
    "langchain-openai>=0.0.5",
    "openai>=1.10.0",
    "tiktoken>=0.5.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "streamlit>=1.52.2",
    "plotly>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
equilibra = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "aiosqlite>=0.22.1",
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
